# logram-setup

./: .gitignore  CMakeLists.txt  Doxyfile  Mainpage.dox  README
appmanager/: CMakeLists.txt  appmanager.qrc  appmanager.ui  breadcrumb.cpp  breadcrumb.h  categorydrawer.cpp  categorydrawer.h  entry.ui  entrymoreinfo.ui  introdisplay.cpp  introdisplay.h  mainwindow.cpp  mainwindow.h  packagedisplay.cpp  packagedisplay.h  packageentry.cpp  packageentry.h  packagelist.cpp  packagelist.h
artwork/: README  install
artwork/kdmtheme/: KdmGreeterTheme.desktop  logram.xml
artwork/ksplashtheme/: Theme.rc
artwork/ksplashtheme/1600x1200/: .directory  bull.xcf  bull_list.xcf  description.txt
artwork/ksplashtheme/800x600/: .directory
artwork/wallpaper/: metadata.desktop
assistant/: assistant.pro  build-doc  main.cpp  win.cpp  win.h
assistant/html/: logram-doc.css
assistant/src/fr/img/: .directory
assistant/src/fr/src/: debutant.clavier.xml  debutant.fichiers.xml  debutant.index.xml  debutant.interface.xml  debutant.internet.xml  debutant.legende.xml  debutant.logiciel.xml  debutant.menuk.xml  debutant.reseau.xml  debutant.souris.xml  index.xml  project.xml  (+2 more)
base/: README
base/setup/: INSTALL  app.cpp  app.h  build.cpp  cache.cpp  communication.cpp  main.cpp  package.cpp  repoma.cpp  setup.pro  source.cpp  string.cpp  util.cpp
base/setup-dev/: DEPENDENCIES  importpkg  includebin  install.sh  repoma  sepa
buildserver/: CMakeLists.txt  app.cpp  app.h  buildserver.conf  buildserver.conf.sample  buildserver.pro  buildserver.qrc  cleanup  main.cpp  mkskel  smtp.cpp  smtp.h  thread.cpp  thread.h  weight.qs  worker.cpp  worker.h
buildserver/skel/etc/: hosts  resolv.conf
cataloginstaller/: CMakeLists.txt  CatalogInstaller.desktop  app.cpp  app.h  main.cpp
cmake/modules/: FindELF.cmake  FindGPGME.cmake  FindLibArchive.cmake
confrunner/: confrunner.pro  main.cpp  window.cpp  window.h
confrunner/scripts/: laptop-mode_fr.xml
doc2html/: doc2html.pro  main.cpp  parser.cpp  parser.h
i18n/: libpackage_en.ts
libpackage/: CMakeLists.txt  communication.cpp  communication.h  config.h.cmake  databaseformat.h  databasepackage.cpp  databasepackage.h  databasereader.cpp  databasereader.h  databasewriter.cpp  databasewriter.h  filepackage.cpp  filepackage.h  libpackage.pro  metadata.dtd  package.cpp  package.h  packagecommunication.cpp  packagecommunication.h  packagelist.cpp  packagelist.h  packagemetadata.cpp  packagemetadata.h  packagesource.cpp  packagesource.h  packagesystem.cpp  packagesystem.h  processthread.cpp  processthread.h  repopwdcommunication.cpp  repopwdcommunication.h  repositorymanager.cpp  repositorymanager.h  scriptapi  solver.cpp  solver.h  solver_p.h  strings.cpp  templatable.cpp  templatable.h  (+1 more)
libpackage/plugins/: CMakeLists.txt
libpackage/plugins/checkfiles/: CMakeLists.txt  checkfiles.cpp  checkfiles.h
libpackage/plugins/filemanypackages/: CMakeLists.txt  filemanypackages.cpp  filemanypackages.h
libpackage/plugins/noinfodir/: CMakeLists.txt  noinfodir.cpp  noinfodir.h
libpackage/plugins/shlibdeps/: CMakeLists.txt  shlibdeps.cpp  shlibdeps.h
libpackageui/: CMakeLists.txt  actionpage.cpp  actionpage.h  actionpage.ui  branchepage.cpp  branchepage.h  categoryview.cpp  categoryview.h  communicationdialog.cpp  communicationdialog.h  communicationdialog.ui  donepage.cpp  donepage.h  donepage.ui  filterinterface.cpp  filterinterface.h  flags.ui  infopane.cpp  infopane.h  infopane.ui  installpage.cpp  installpage.h  installwizard.cpp  installwizard.h  licensepage.cpp  licensepage.h  packagedataprovider.cpp  packagedataprovider.h  packagedataproviderinterface.h  progressdialog.cpp  progressdialog.h  progresslist.cpp  progresslist.h  searchbar.cpp  searchbar.h  searchbar.ui  utils.cpp  utils.h
libs/: README
libs/libpackage/: buildpkg.cpp  buildpkg.h  communication.cpp  communication.h  databaseformat.h  databasepackage.cpp  databasepackage.h  databasereader.cpp  databasereader.h  databasewriter.cpp  databasewriter.h  filepackage.cpp  filepackage.h  helperscript  libpackage.cpp  libpackage.h  libpackage.pro  libpackage_p.cpp  libpackage_p.h  package.cpp  package.h  packagelist.cpp  packagelist.h  packagemetadata.cpp  packagemetadata.h  packagesource.cpp  packagesource.h  packagesystem.cpp  packagesystem.h  processthread.cpp  processthread.h  repositorymanager.cpp  repositorymanager.h  scriptapi  solver.cpp  solver.h  sources.list.sample  templatable.cpp  weight.qs
lpm/: CMakeLists.txt  app.cpp  app.h  cache.cpp  communication.cpp  main.cpp  package.cpp  repoma.cpp  source.cpp  string.cpp
packageinstaller/: CMakeLists.txt  PackageInstaller.desktop  main.cpp  mainwindow.cpp  mainwindow.h  setup-mime.xml
pkgui/: CMakeLists.txt  Pkgui.desktop  actionlist.cpp  actionpage.cpp  actionpage.h  actionpage.ui  branchepage.cpp  branchepage.h  branchepage.ui  communicationdialog.cpp  communicationdialog.h  donepage.cpp  donepage.h  flags.ui  installpage.cpp  installpage.h  installpage.ui  installwizard.cpp  installwizard.h  installwizard.ui  licensepage.cpp  licensepage.h  licensepage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packageinfo.cpp  packageitem.cpp  packagelist.cpp  packagesection.cpp  pkgui.qrc  progressdialog.cpp  progressdialog.h  progresslist.cpp  progresslist.h
pkgui/images/: .directory
presentation/: main.cpp  myclass.h  presentation.pro
setup/: CMakeLists.txt  app.cpp  app.h  cache.cpp  communication.cpp  config.h.cmake  main.cpp  package.cpp  repoma.cpp  setup.pro  source.cpp  string.cpp
tools/logram-bot-irc/: Makefile  cmd.c  config.c  garbage.c  irc.c  local.h  main.c  queue.h  rss.c  rss.sh  script.sh  structs.h  svn.c  svn.sh
tools/luploader/: README
ui/: README
ui/assistant/fr/: compu-environment.xml  compu-files.xml  compu-hardware.xml  compu-home.xml  compu-interface.xml  compu-keyboard.xml  compu-known.xml  compu-mouse.xml  compu-next.xml  compu-os.xml  compu-software.xml  compu-struct.xml  home.xml  tree.xml
ui/confrunner/: main.cpp  window.cpp  window.h
ui/confrunner/scripts/: laptop-mode_fr.xml
